[package]
name = "redsumer-rs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.19"
redis = { version = "0.23.0", features = ["tokio-comp"] }
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.4", features = ["v4"] }
