[package]
name = "redsumer-rs"
description = "Lightweight implementation of Redis Streams for Rust"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
keywords = [
    "redis",
    "redis streams",
]
repository = "https://github.com/enerBit/redsumer-rs"
categories = [
    "database-implementations",
]
authors = [
    "enerBit",
    "Juan Manuel Tamayo <jmtamayog23@gmail.com>",
]

[dependencies]
redis = { version = "0.23.2", features = ["tokio-comp"] }
tokio = { version = "1.32.0", features = ["full"] }
log = { version = "0.4.20" }

[dev-dependencies]
structmap = { version = "0.1.6" }
structmap-derive = { version = "0.1.6" }
uuid ={ version = "*", features = ["v4"] }