[package]
name = "redsumer"
description = "Lightweight implementation of Redis Streams for Rust"
version = "0.4.2"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"
keywords = [
    "redis",
    "redis_streams",
]
homepage = "https://github.com/enerBit/redsumer-rs"
repository = "https://github.com/enerBit/redsumer-rs"
documentation = "https://docs.rs/redsumer"
categories = [
    "database-implementations",
]
authors = [
    "enerBit",
    "Juan Manuel Tamayo <jmtamayog23@gmail.com>",
]

[dependencies]
redis = { version = "0.25.4", features = ["tokio-comp", "streams"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1" }
time = { version = "0.3.36", features = ["parsing"] }
bytes = { version = "1.6.0" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120" }
log = { version = "0.4.22" }
