[package]
name = "redsumer"
description = "Lightweight implementation of Redis Streams for Rust"
version = "0.5.2"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"
keywords = [
    "redis",
    "redis_streams",
]
homepage = "https://github.com/enerBit/redsumer-rs"
repository = "https://github.com/enerBit/redsumer-rs"
documentation = "https://docs.rs/redsumer"
categories = [
    "database-implementations",
]
authors = [
    "Juan Manuel Tamayo <jmtamayog23@gmail.com>",
]

[dependencies]
redis = { version = ">=0.27.2", features = ["streams"] }
tracing = { version = ">=0.1.40" }

[dev-dependencies]
redis-test = { version = "0.6.0" }
tokio = { version = "1.41.1", features = ["full"] }
time ={ version = "0.3.36" }
uuid ={ version = "1.11.0", features = ["v4"] }
