[package]
name = "redsumer"
description = "Lightweight implementation of Redis Streams for Rust"
version = "0.5.3"
edition = "2021"
license-file = "../LICENSE"
readme = "../README.md"
keywords = ["redis", "redis_streams"]
homepage = "https://github.com/enerBit/redsumer-rs"
repository = "https://github.com/enerBit/redsumer-rs"
documentation = "https://docs.rs/redsumer"
categories = ["database-implementations"]
authors = ["Juan Manuel Tamayo <jmtamayog23@gmail.com>"]

[dependencies]
redis = { version = ">=0.28.0", features = ["streams"] }
tracing = { version = ">=0.1.40" }

[dev-dependencies]
redis-test = { version = "0.8.0" }
tokio = { version = "1.43.0", features = ["full"] }
time = { version = "0.3.37" }
uuid = { version = "1.12.1", features = ["v4"] }
